// ENUMS restrict data type
Enum enrollment_status {
  pending
  approved
  rejected
  expired
}

Enum payment_status {
  pending
  confirmed
}

Enum payment_origin {
  online
  in_person
}

Enum payment_method {
  credit_card
  pix
  cash
  donation_item
  hybrid
  scolarship
}

Enum course_status {
  active
  inactive
}

Enum donation_type {
  dog_food
  cat_food
  bird_food
}

// ========================
// Equipe e perfis internos
// ========================

Table User {
  id int [pk, increment]
  username varchar
  email varchar
  password varchar
  is_active boolean
  note: 'Tabela nativa do Django (auth_user) - Acesso exclusivo da equipe'
}

Table Employee {
  id int [pk, increment]
  user_id int [unique, ref: - User.id]
  role varchar
  hire_date date
}

Table Instructor {
  id int [pk, increment]
  employee_id int [ref: > Employee.id]
  bio text [note: 'Breve currículo do instrutor']
  specialty varchar [note: 'Ex: Mergulho, Canoagem, etc.']
  
  note: 'Perfil profissional do instrutor. Dados pessoais (nome, email) vêm de Employee → User.'
}

// ========================
// Cursos e turmas
// ========================

Table Course {
  id int [pk, increment]
  name varchar
  description text [note: 'Resumo curto do curso (1-2 parágrafos), aparece em cards e no topo da tela de detalhes.']
  syllabus text [note: 'Roteiro/conteúdo programático. Aceita Markdown.']
  duration_hours int
  price decimal
  status course_status
  image varchar [null, note: 'Caminho do arquivo de imagem enviado pelo admin (armazenado em MEDIA_ROOT/courses/).']
  min_age int [null, note: 'Idade mínima exigida. Vazio = sem restrição.']
  has_certificate boolean [default: true, note: 'Curso emite certificado ao final?']
  donation_kg_required decimal [null, note: 'kg de ração exigidos como parte do pagamento. Vazio = não exige.']
  created_at datetime
  updated_at datetime
}

// Relação M2M: um Curso pode ter vários Instrutores e um Instrutor pode lecionar vários Cursos.
// Mínimo 1 instrutor por curso (validado no clean()).
Table CourseInstructor {
  id int [pk, increment]
  course_id int [ref: > Course.id]
  instructor_id int [ref: > Instructor.id]

  indexes {
    (course_id, instructor_id) [unique]
  }
}

Table Class {
  id int [pk, increment]
  course_id int [ref: > Course.id] 
  start_date date
  start_time time
  end_time time
  capacity int
  label varchar [note: 'Nome opcional da turma (ex: "Turma escola Eusébio Farias")']
  is_private boolean [default: false, note: 'Turma fechada: não aparece na listagem pública']
}

// ========================
// Alunos, matrículas e pagamentos
// ========================

Table Student {
  id int [pk, increment]
  name varchar
  email varchar [unique]
  cpf varchar [unique, note: 'Útil para futura validação de certificado']
  phone varchar
  emergency_contact varchar
  birth_date date [note: 'Data de nascimento. Idade é derivada (não armazenada) e usada para restrições de idade e identificação de menores.']
  note: 'Visitante/Aluno de compra rápida. Não acessa o painel.'
}

Table Enrollment {
  id int [pk, increment]
  student_id int [ref: > Student.id]
  class_id int [ref: > Class.id] 
  enrollment_date datetime
  status enrollment_status
  is_overbooked boolean [default: false] //If admin create a enrollment with full capacity
  expires_at datetime [null, note: 'Prazo para confirmar pagamento. Após esse horário, pending vira expired automaticamente.']
}

Table Payment {
  id int [pk, increment]
  enrollment_id int [ref: > Enrollment.id]
  payment_date datetime
  payment_method payment_method
  money_amount decimal
  item_quantity_kg decimal
  donation_type donation_type [null, note: 'Tipo da ração doada. Obrigatório se payment_method for donation_item ou hybrid.']
  status payment_status
  approved_by_id int [ref: > Employee.id] // O funcionário que validou no caixa ou sistema
  payment_origin payment_origin [default: 'online'] // online or in_person
}